EcomProj: Added cookie based authentication along with signin, logout get user and get username options enabled.